upgrade Neo4j 2.2.1